updated relative path for image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="10">
     <tr>
       <td>
-        <img src="images\ambrish shukla.jpeg" width="150" height="150" alt="ambrish shukla image">
+        <img src="images/ambrish shukla.jpeg" width="150" height="150" alt="ambrish shukla image">
       </td>
       <td>
         <h1><a href="https://www.linkedin.com/feed/">Ambrish shukla</a></h1>
